# Console-cpp-projects

./: .gitignore
CSnake/: CMakeLists.txt
CSnake/include/: conhdl.h  deque.h  game.h  vector2.h
CSnake/src/: conhdl.c  deque.c  game.c  main.c  vector2.c
CTetris/: Makefile
CTetris/src/: main.c  tetris.c  tetris.h
Calculator/: CMakeLists.txt
Calculator/include/: Calculator.hpp
Calculator/src/: Calculator.cpp  Main.cpp
Snake/: CMakeLists.txt
Snake/include/: Game.hpp
Snake/src/: Game.cpp  Main.cpp
Stdlib/: CMakeLists.txt
Stdlib/include/: LinkedList.h  Vector2.h
Stdlib/src/: Main.cpp
